bitfields/tests/compile_error_cases/bitfield_unsupported_type.stderr
error: The 'bitfield' attribute must have an unsigned integer type as its first argument.
  --> tests/compile_error_cases/bitfield_unsupported_type.rs:8:1
   |
 8 | / pub struct Bitfield {
 9 | |     a: u8,
10 | |     b: u8,
11 | |     c: u8,
12 | | }
   | |_^
